RESOLVED FIXED65888
Fix thread-safety of AudioNode deletion
https://bugs.webkit.org/show_bug.cgi?id=65888
Summary Fix thread-safety of AudioNode deletion
Chris Rogers
Reported 2011-08-08 16:33:09 PDT
Fix thread-safety of AudioNode deletion
Attachments
Patch (8.03 KB, patch)
2011-08-08 16:49 PDT, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-08-08 16:49:54 PDT
Chris Rogers
Comment 2 2011-08-08 16:52:29 PDT
AudioNodes should be deleted only on the main thread. Some AudioNodes hold references to ref-counted objects which are not thread-safe (like Float32Array)
Kenneth Russell
Comment 3 2011-08-08 17:28:56 PDT
Comment on attachment 103314 [details] Patch Looks good to me.
Chris Rogers
Comment 4 2011-08-08 17:49:16 PDT
Note You need to log in before you can comment on or make changes to this bug.