Fix thread-safety of AudioNode deletion https://bugs.webkit.org/show_bug.cgi?id=65888

Reviewed by Kenneth Russell

No new tests - JavaScript API is not affected.

* webaudio/AudioContext.cpp:
(WebCore::AudioContext::AudioContext):
(WebCore::AudioContext::constructCommon):
(WebCore::AudioContext::~AudioContext):
(WebCore::AudioContext::uninitialize):
(WebCore::AudioContext::handlePostRenderTasks):
(WebCore::AudioContext::scheduleNodeDeletion):
(WebCore::AudioContext::deleteMarkedNodesDispatch):
(WebCore::AudioContext::deleteMarkedNodes):
* webaudio/AudioContext.h:


Canonical link: https://commits.webkit.org/81745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92658 268f45cc-cd09-0410-ab3c-d52691b4dbfc